...
                      vertical: 20,
                    ),
                    key: const ValueKey('limpar-btn'),
                    onPressed: () =>
                        context.bloc<CarsFilterCubit>().clearFilters(),
                    child: Text(
                      'Limpar',
                      style: TextStyle(
                        color: Theme.of(context).primaryColor,
                        fontSize: 16,
                        fontWeight: FontWeight.bold,
                      ),
                    ),
...
                            colors: colors,
                          );

                      context.bloc<CarsFeedCubit>().closeSlidingPanel();
                    },
                    child: Text(
                      'Aplicar',
                      style: TextStyle(
                        color: Colors.white,
                        fontSize: 16,
                        fontWeight: FontWeight.bold,
                      ),
                    ),
...
